refactor: memset 参数加载优化